Fixing alignment on mobile for re-download option for submission buttons

--- a/app/components/community_activity_component/community_activity_component.scss
+++ b/app/components/community_activity_component/community_activity_component.scss
@@ -71,12 +71,12 @@
 .community-activity-component__objective-button-container {
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
   width: 100%;
+  align-items: center;
 
-  
   @include govuk-media-query($from: tablet) {
     flex: 0 1 250px;
+    align-items: flex-end;
   }
 
   .progress-component {
